@@ -1,63 +1,15 @@
-as.SpatialPolygons.GridTopology
-                        Make SpatialPolygons object from GridTopology
-                        object
-as.SpatialPolygons.PolygonsList
-                        Making SpatialPolygons objects
 AttributeList-class     Class "AttributeList"
-bbox,Spatial-method     retrieve bbox from spatial data
-bpy.colors              blue-pink-yellow color scheme that prints well
-                        on black/white printers
-bubble                  Create a bubble plot of spatial data
-char2dms                Convert character vector to DMS-class object
-contourLines2SLDF       Converter functions to build
-                        SpatialLinesDataFrame objects
-coordinates             sets spatial coordinates to create spatial
-                        data, or retrieves spatial coordinates
-coordinates-methods     retrieves spatial coordinates
-coordnames-methods      retrieve or assign coordinate names for
-                        classes in sp
 CRS-class               Class "CRS" of coordinate reference system
                         arguments
-degAxis                 axis with degrees
-dimensions,Spatial-method
-                        retrieve spatial dimensions from spatial data
 DMS-class               Class "DMS" for degree, minute, decimal second
                         values
-gridded-methods         specify spatial data as being gridded, or find
-                        out whether they are
 GridTopology-class      Class "GridTopology" ~~~
-image.SpatialGridDataFrame
-                        image gridded spatial data, or convert to
-                        format for image
-is.projected            Sets or retrieves projection attributes on
-                        classes extending SpatialData
 Line                    create objects of class Line or Lines
 Line-class              Class "Line"
 Lines-class             Class "Lines"
-mapasp                  Calculate aspect ratio for plotting geographic
-                        maps
-meuse                   Meuse river data set
-meuse.grid              Prediction Grid for Meuse Data Set
-meuse.riv               River Meuse outline
-nowrapSpatialLines      Split SpatialLines components at offset
-overlay                 spatial overlay for points, grids and polygons
-overlay-methods         Methods for spatially overlay-ing points
-                        (grids) and polygons layers
-panel.spplot            panel and panel utility functions for spplot
-point.in.polygon        do point(s) fall in a given polygon?
 Polygon-class           Class "Polygon"
-polygons                sets spatial coordinates to create spatial
-                        data, or retrieves spatial coordinates
 Polygons-class          Class "Polygons"
-polygons-methods        Retrieve polygons from
-                        SpatialPolygonsDataFrame object
-read.asciigrid          read/write to/from (ESRI) asciigrid format
-recenter-methods        Methods for Function recenter in Package 'sp'
 Rlogo                   Rlogo jpeg image
-select.spatial          select points spatially
-sp                      A package providing classes and methods for
-                        spatial data: points, lines, polygons and
-                        grids
 Spatial-class           Class "Spatial" ~~~
 SpatialGrid-class       Class "SpatialGrid" ~~~
 SpatialGridDataFrame-class
@@ -83,6 +35,54 @@ SpatialPolygons         create objects of class SpatialPolygons or
 SpatialPolygons-class   Class "SpatialPolygons"
 SpatialPolygonsDataFrame-class
                         Class "SpatialPolygonsDataFrame"
+as.SpatialPolygons.GridTopology
+                        Make SpatialPolygons object from GridTopology
+                        object
+as.SpatialPolygons.PolygonsList
+                        Making SpatialPolygons objects
+bbox,Spatial-method     retrieve bbox from spatial data
+bpy.colors              blue-pink-yellow color scheme that prints well
+                        on black/white printers
+bubble                  Create a bubble plot of spatial data
+char2dms                Convert character vector to DMS-class object
+contourLines2SLDF       Converter functions to build
+                        SpatialLinesDataFrame objects
+coordinates             sets spatial coordinates to create spatial
+                        data, or retrieves spatial coordinates
+coordinates-methods     retrieves spatial coordinates
+coordnames-methods      retrieve or assign coordinate names for
+                        classes in sp
+degAxis                 axis with degrees
+dimensions,Spatial-method
+                        retrieve spatial dimensions from spatial data
+gridded-methods         specify spatial data as being gridded, or find
+                        out whether they are
+image.SpatialGridDataFrame
+                        image gridded spatial data, or convert to
+                        format for image
+is.projected            Sets or retrieves projection attributes on
+                        classes extending SpatialData
+mapasp                  Calculate aspect ratio for plotting geographic
+                        maps
+meuse                   Meuse river data set
+meuse.grid              Prediction Grid for Meuse Data Set
+meuse.riv               River Meuse outline
+nowrapSpatialLines      Split SpatialLines components at offset
+overlay                 spatial overlay for points, grids and polygons
+overlay-methods         Methods for spatially overlay-ing points
+                        (grids) and polygons layers
+panel.spplot            panel and panel utility functions for spplot
+point.in.polygon        do point(s) fall in a given polygon?
+polygons                sets spatial coordinates to create spatial
+                        data, or retrieves spatial coordinates
+polygons-methods        Retrieve polygons from
+                        SpatialPolygonsDataFrame object
+read.asciigrid          read/write to/from (ESRI) asciigrid format
+recenter-methods        Methods for Function recenter in Package 'sp'
+select.spatial          select points spatially
+sp                      A package providing classes and methods for
+                        spatial data: points, lines, polygons and
+                        grids
 spmap.to.lev            rearrange data in SpatialPointsDataFrame or
                         SpatialGridDataFrame for plotting with spplot
                         (levelplot/xyplot wrapper)
